# sb-cli

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: bible.py  config.py  journal.py  new.py  sb.py  utils.py
tests/integration/: test_bible_integration.py  test_config_integration.py  test_journal_integration.py  test_new_integration.py  test_sb_integration.py  test_utils_integration.py
tests/unit/: test_bible_unit.py  test_config_unit.py  test_journal_unit.py  test_new_unit.py  test_sb_unit.py  test_utils_unit.py
